# portalcrane

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  README.es.md  README.fr.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  registry-config.yml  registry-config.yml.template  supervisord.conf
.agents/skills/angular-developer/: SKILL.md
.agents/skills/angular-developer/references/: angular-animations.md  angular-aria.md  di-fundamentals.md  environment-configuration.md  outputs.md  signal-forms.md
.agents/skills/development-standards/: SKILL.md
.agents/skills/fastapi/: SKILL.md
.agents/skills/fastapi/references/: dependencies.md
.agents/skills/sqlmodel-expert/: SKILL.md
.agents/skills/sqlmodel-expert/references/: advanced-models.md  migrations.md  queries-optimization.md
.claude/: settings.json
.claude/skills/development standards/: SKILL.md
.claude/skills/development-standards/: SKILL.md
.claude/skills/development-standards/references/: angular.md  fastapi.md
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml  registry-config.yml.tpl
.devcontainer/scripts/: install-trivy-registry.sh  post-create.sh
.github/workflows/: ci.yml  create-release.yml  docker-publish.yml
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  helpers.py  main.py  security.py
backend/app/core/: bootstrap.py  cookies.py  crypto.py  jwt.py  security.py
backend/app/routers/: about.py  auth.py  config_router.py  dashboard.py  external_registries.py  folders.py  groups.py  network.py  oidc.py  personal_tokens.py  registries.py  registry.py  registry_proxy.py  repositories.py  staging.py  system.py  transfer.py  trivy.py
backend/app/services/: audit_service.py  email_service.py  external_dockerhub.py  external_github.py  external_registry.py  external_registry_service.py  external_v2.py  job_service.py  oidc_service.py  process_manager.py  proxy_service.py  registries_service.py  registry_service.py  repositories_service.py  transfer_service.py  trivy_service.py
backend/app/services/providers/: __init__.py  base.py  external_dockerhub.py  external_github.py  external_v2.py
backend/routers/: auth.py  dashboard.py  registry.py  staging.py
backend/services/: registry_service.py
clamav/: clamd.conf  freshclam.conf
docker/: entrypoint.sh  registry-config.yml.tpl  supervisord.conf.tpl
dockerfiles/: docker-entrypoint.sh  registry-config.yml.template  supervisord.conf
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
frontend/public/i18n/: en.json  es.json  fr.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
(+115 files in other folders)
