[project]
name = "portalcrane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.3",
    "packaging>=26.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.13.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
]

[tool.setuptools]
packages = ["backend"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
