[project]
name = "portalcrane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.0",
    "fastapi[standard]>=0.139.0",
    "packaging>=26.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.31",
]

[tool.setuptools]
packages = ["backend"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.9",
    "ruff>=0.15.8",
]

# ── Ruff (linter PEP8) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Ruff — format ────────────────────────────────────────────────────────────
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy (type checking) ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
